--- a/packages/code-kitchen/package.json
+++ b/packages/code-kitchen/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
+    "semantic-release": "^19.0.2",
     "stylis": "^4.0.13",
     "tsup": "^5.11.13"
   },
