--- a/packages/code-kitchen/package.json
+++ b/packages/code-kitchen/package.json
@@ -1,6 +1,6 @@
 {
   "name": "code-kitchen",
-  "version": "0.0.1",
+  "version": "0.0.0-development",
   "license": "Apache-2.0",
   "scripts": {
     "build": "zx build.mjs"
