--- a/packages/code-kitchen/.releaserc.yml
+++ b/packages/code-kitchen/.releaserc.yml
@@ -6,4 +6,5 @@ plugins:
   - "@semantic-release/release-notes-generator"
   - "@semantic-release/changelog"
   - "@semantic-release/npm"
-  -
+  - "@semantic-release/git"
+  - "@semantic-release/github"
