--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@playwright/test": "^1.19.2",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^9.0.1",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "conventional-changelog-conventionalcommits": "^4.6.3",
     "eslint": "^8.10.0",
     "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
+    "semantic-release": "^19.0.2",
     "typescript": "^4.5.4",
     "zx": "^5.2.0"
   },
