--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -11,6 +11,7 @@ plugins:
       - CHANGELOG.md
       - "packages/code-kitchen"
       - "!packages/code-kitchen/dist"
+      - "!packages/code-kitchen/node_modules"
   - - "@semantic-release/npm"
     - pkgRoot: packages/code-kitchen/dist
   - "@semantic-release/github"
