--- a/docs/package.json
+++ b/docs/package.json
@@ -10,31 +10,32 @@
     "gh-deploy": "npx gh-pages -d out -t true"
   },
   "dependencies": {
-    "@babel/core": "^7.17.5",
-    "@mdx-js/loader": "^2.0.0",
-    "@mdx-js/react": "^2.0.0",
-    "@next/mdx": "^12.1.0",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "autoprefixer": "^10.4.0",
+    "@babel/core": "^7.17.9",
+    "@mdx-js/loader": "^2.1.1",
+    "@mdx-js/react": "^2.1.1",
+    "@next/mdx": "^12.1.4",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "autoprefixer": "^10.4.4",
     "classnames": "^2.3.1",
     "code-kitchen": "workspace:*",
     "copy-webpack-plugin": "^10.1.0",
     "demo-lib": "workspace:*",
-    "esbuild-wasm": "^0.14.23",
-    "next": "^12.1.0",
+    "next": "^12.1.4",
     "next-transpile-modules": "^9.0.0",
-    "postcss": "^8.4.7",
+    "postcss": "^8.4.12",
     "raw-loader": "^4.0.2",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.0.23",
-    "unist-util-visit": "^2",
-    "webpack": "^5.69.1"
+    "unist-util-visit": "^4.1.0",
+    "webpack": "^5.72.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.19.2",
-    "playwright": "^1.19.2"
+    "@playwright/test": "^1.20.2",
+    "esbuild-wasm": "^0.14.34",
+    "monaco-editor": "^0.33.0",
+    "playwright": "^1.20.2"
   }
 }
