--- a/packages/code-kitchen/package.json
+++ b/packages/code-kitchen/package.json
@@ -8,22 +8,22 @@
   "main": "src/index.ts",
   "module": "src/index.ts",
   "dependencies": {
-    "@monaco-editor/loader": "^1.2.0",
-    "esbuild-wasm": "^0.14.23",
-    "monaco-editor": "^0.32.1"
+    "@monaco-editor/loader": "^1.3.0",
+    "esbuild-wasm": "^0.14.34",
+    "monaco-editor": "^0.33.0"
   },
   "devDependencies": {
     "@types/stylis": "^4.0.2",
     "esbuild-wasm": "^0.14.0",
-    "fast-equals": "^3.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "fast-equals": "^3.0.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "rimraf": "^3.0.2",
-    "stylis": "^4.0.13",
-    "tsup": "^5.11.13"
+    "stylis": "^4.1.0",
+    "tsup": "^5.12.4"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   }
 }
