--- a/packages/code-kitchen/package.json
+++ b/packages/code-kitchen/package.json
@@ -8,9 +8,7 @@
   "main": "src/index.ts",
   "module": "src/index.ts",
   "dependencies": {
-    "@monaco-editor/loader": "^1.3.0",
-    "esbuild-wasm": "^0.14.34",
-    "monaco-editor": "^0.33.0"
+    "@monaco-editor/loader": "^1.3.0"
   },
   "devDependencies": {
     "@types/stylis": "^4.0.2",
