--- a/packages/code-kitchen/package.json
+++ b/packages/code-kitchen/package.json
@@ -14,6 +14,7 @@
     "@types/stylis": "^4.0.2",
     "esbuild-wasm": "^0.14.36",
     "fast-equals": "^3.0.1",
+    "monaco-editor": "^0.33.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "rimraf": "^3.0.2",
@@ -22,6 +23,8 @@
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "esbuild-wasm": "^0.14.0",
+    "monaco-editor": "^0.33.0"
   }
 }
