--- a/packages/bundler/package.json
+++ b/packages/bundler/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code-kitchen",
+  "name": "@code-kitchen/bundler",
   "version": "0.0.0-development",
   "license": "Apache-2.0",
   "scripts": {
@@ -7,17 +7,14 @@
   },
   "main": "src/index.ts",
   "module": "src/index.ts",
-  "dependencies": {
-    "@monaco-editor/loader": "^1.3.1"
-  },
   "devDependencies": {
-    "@code-kitchen/bundler": "workspace:*",
+    "@types/stylis": "^4.0.2",
     "esbuild-wasm": "^0.14.38",
     "fast-equals": "^3.0.1",
-    "monaco-editor": "^0.33.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "rimraf": "^3.0.2",
+    "stylis": "^4.1.1",
     "tsup": "^5.12.6"
   },
   "peerDependencies": {
