--- a/docs/package.json
+++ b/docs/package.json
@@ -30,13 +30,17 @@
     "react-dom": "^18.1.0",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.0.24",
-    "unist-util-visit": "^4.1.0",
     "webpack": "^5.72.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.21.1",
     "esbuild-wasm": "^0.14.38",
     "monaco-editor": "^0.33.0",
-    "playwright": "^1.21.1"
+    "next-mdx-remote": "^4.0.3",
+    "playwright": "^1.21.1",
+    "rehype-parse": "^8.0.4",
+    "remark-gfm": "^3.0.1",
+    "unified": "^10.1.2",
+    "unist-util-visit": "^4.1.0"
   }
 }
