--- a/packages/bundler/package.json
+++ b/packages/bundler/package.json
@@ -22,5 +22,8 @@
     "monaco-editor": "^0.33.0",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
+  },
+  "dependencies": {
+    "debug": "^4.3.4"
   }
 }
