--- a/packages/code-kitchen/package.json
+++ b/packages/code-kitchen/package.json
@@ -8,7 +8,8 @@
   "main": "src/index.ts",
   "module": "src/index.ts",
   "dependencies": {
-    "@monaco-editor/loader": "^1.3.1"
+    "@monaco-editor/loader": "^1.3.1",
+    "debug": "^4.3.4"
   },
   "devDependencies": {
     "@code-kitchen/bundler": "workspace:*",
