--- a/docs/package.json
+++ b/docs/package.json
@@ -3,28 +3,29 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next-remote-watch ./posts",
     "build": "next build && next export && touch out/.nojekyll",
     "start": "next start",
     "test": "playwright test --project=chromium",
     "gh-deploy": "npx gh-pages -d out -t true"
   },
   "dependencies": {
-    "@babel/core": "^7.17.9",
+    "@babel/core": "^7.17.10",
     "@code-kitchen/bundler": "workspace:*",
     "@mdx-js/loader": "^2.1.1",
     "@mdx-js/react": "^2.1.1",
-    "@next/mdx": "^12.1.5",
+    "@next/mdx": "^12.1.6",
     "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.0",
-    "autoprefixer": "^10.4.5",
+    "@types/react-dom": "^18.0.3",
+    "autoprefixer": "^10.4.7",
     "classnames": "^2.3.1",
     "code-kitchen": "workspace:*",
     "copy-webpack-plugin": "^10.2.4",
     "demo-lib": "workspace:*",
-    "next": "^12.1.5",
+    "next": "^12.1.6",
+    "next-remote-watch": "^1.0.0",
     "next-transpile-modules": "^9.0.0",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.13",
     "raw-loader": "^4.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
